<resources>
    <string name="app_name">eiqui</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="db_name">Database Name</string>
    <string name="odoo_host_name">https://your_odoo.host</string>
    <string name="btn_login_enter">Login In</string>
    <string name="credits" translatable="false">Aloxa Solucións S.L.</string>
    <string name="login_invalid">Invalid Login or Password</string>

    <string name="init_app_error">Error initializing app :S ...</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="title_activity_main" translatable="false">eiqui</string>
    <string name="title_activity_task">eiqui - tasks</string>
    <string name="title_activity_issue">eiqui - issues</string>
    <string name="title_activity_settings">eiqui - settings</string>

    <string name="card_tasks">TASKS</string>
    <string name="card_issues">ISSUES</string>

    <string name="tasks">Tasks</string>
    <string name="issues">Issues</string>

    <string name="reviewer">Reviewer</string>
    <string name="description">Description</string>
    <string name="project_name">Project Name</string>
    <string name="task_assigned">Task Assigned</string>
    <string name="activities">Activities</string>
    <string name="details">Details</string>
    <string name="messages">Messages</string>
    <string name="contact">Contact</string>

    <string name="eiqui_app" translatable="false">eiqui App</string>
    <string name="loading_data">Loading Data...</string>
    <string name="loading_messages">Loading Messages...</string>
    <string name="no_issues">Good work! No open issues :)</string>
    <string name="no_tasks">Good work! No open tasks :)</string>
    <string name="undefined">Undefined</string>

    <string name="transition_task_issue_detail" translatable="false">transition_task_issue_detail</string>

    <string name="pref_uid_action">User ID</string>
    <string name="pref_uid_summary">The UID used in the communications</string>
    <string name="pref_title_uid">User Identification</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="projects">Projects</string>
    <string name="old_tasks" formatted="false">Have %d tasks with more than %d months old!</string>
    <string name="old_issues" formatted="false">Have %d issues with more than %d weeks old!</string>

    <string name="oops_error" formatted="false">Oops! Error: %s</string>
    <string name="oops_error_undefined">Oops! Error: Undefined</string>

    <string name="notification_new_message" formatted="false">Have %d new messages</string>

    <string name="pref_odoo_server">Odoo Server</string>
    <string name="pref_summary_odoo_host">Your Odoo server url (best https)</string>
    <string name="pref_title_odoo_host">Host</string>
    <string name="pref_summary_dbname">Database Name used in querys</string>
    <string name="pref_title_dname">Database Name</string>

    <string name="pref_odoo_user">Odoo User</string>
    <string name="pref_summary_user_login">Your Odoo login</string>
    <string name="pref_title_user_login">Login</string>
    <string name="pref_summary_user_pass">Your user password</string>
    <string name="pref_title_user_pass">Password</string>

    <string name="pref_title_sync_refresh_delay">Sync. Refresh Delay</string>
    <string name="pref_sync_refresh_delay_default">180000</string>

</resources>
